FIX; Correct font size and width for cover text on all pages for clearer readability.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ nav {
 }
 
 #menu {
-    font-size: 3rem;
+    font-size: 1.5rem;
     letter-spacing: 4px;
     list-style-type: none;
     justify-content: flex-start;
@@ -107,9 +107,9 @@ main {
 /* Cover Text */
 #cover-text {
     color: white;
-    font-size: 4rem;
+    font-size: 1rem;
     padding: 15px 20px 15px 25px;
-    width: 80%;
+    width: 100%;
     color: #ffffff;
     background-color: rgba(0, 0, 0, 0.6);
 }
@@ -175,10 +175,10 @@ main {
 /* History Cover Text */
 #history-cover-text {
     color: white;
-    font-size: 2rem;
+    font-size: 1rem;
     padding-left: 25px;
     padding-top: 20px;
-    width: 80%;
+    width: 100%;
     color: #ffffff;
     background-color: rgba(0, 0, 0, 0.6);
 
@@ -215,10 +215,10 @@ img {
 /* joinus covet text */
 #joinus-cover-text {
     color: white;
-    font-size: 2rem;
+    font-size: 1rem;
     padding-left: 25px;
     padding-top: 20px;
-    width: 80%;
+    width: 100%;
     color: #ffffff;
     background-color: rgba(0, 0, 0, 0.6);
 }
